--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             the link below to access it."
           </p>
           <p>
-            <a class="btn btn-secondary" href="#" role="button"
+            <a class="btn btn-secondary" href="https://rashmi-srivastava.github.io/Rashmi-Portfolio-Bootstrap/" role="button"
               >View details »</a
             >
           </p>
