--- a/index.html
+++ b/index.html
@@ -214,8 +214,9 @@
           />
           <h2>Project 3</h2>
           <p>
-            "I am excited to share my Bootstrap project with you! Please click
-            the link below to access it."
+            "I am excited to share my Bootstrap project with you!
+            This portfolio has been developed using Bootstrap and custom CSS for styling.
+            Please click the link below to access it."
           </p>
           <p>
             <a class="btn btn-secondary" href="https://rashmi-srivastava.github.io/Rashmi-Portfolio-Bootstrap/#" role="button"
